--- a/movieReview/src/App.css
+++ b/movieReview/src/App.css
@@ -1,38 +1,69 @@
-#root {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+@keyframes imgslide{
+    0% {background:url("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQCtd9A9C2zCWkOznT6xf4YwB-n5z8kVzHT41U-XfDkmg2Gu9hm")}
+    15% {background:url("https://upload.wikimedia.org/wikipedia/en/e/ed/The_Murder_of_Nicole_Brown_Simpson_poster.jpg")}
+    30% {background:url("https://upload.wikimedia.org/wikipedia/en/9/90/Bad_Boys_for_Life_poster.jpg")}
+    45% {background:url("https://upload.wikimedia.org/wikipedia/en/4/4e/AFallFromGrace.png")}
+    60% {background:url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQjang2tSfHU_olHQ-m_gzuGMDV-h1wMsAsoagx_ho5GW2KksCy")}
+    80% {background:url("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQCtd9A9C2zCWkOznT6xf4YwB-n5z8kVzHT41U-XfDkmg2Gu9hm")}
+    100% {background:url("https://upload.wikimedia.org/wikipedia/en/a/a2/The_Turning_poster_2020.jpg")}
+  }
 
-/* .logo {
+  .first-elements{
+    flex-direction: row;
+  }
   
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} */
+  .imgdisplay{
+    margin-top: 50px;
+    margin-left: 20px;
+    animation-name: imgslide;
+    float: left;
+    height:350px;
+    width:65%;
+    flex-direction: column;
 
+      padding:10px;
+      animation-duration: 30s;
+      animation-iteration-count: 5;
+      box-shadow: 10px 10px 5px rgb(64, 62, 62) ;
+      border-radius: 10px;
+  }
+  .sample-card{
+    float: left;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    margin-left: 20px;
+  }
 
-.selectGenre{
-  border-radius: 5px;
-  height: 40px;
-  width: auto;
-  padding:10px;
-  margin:10px;
-}
+  .latest-movies{
+    display: flex;
+    margin-top: 10px;
+    /* flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center; */
+  }
+  .footer {
+    text-align: center;
+    padding: 15px;
+    background-color: #333;
+    color: white;
+    margin-top: 70%;
+    
+  }
+  
+  .footer-links {
+    margin-top: 10px;
 
-
-.card {
-  padding: 5em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+  }
+  
+  .footer-links a {
+    color: #bbb;
+    margin: 0 10px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .footer-links a:hover {
+    color: white;
+  }
+  
+  
