--- a/movieReview/src/component/Login.css
+++ b/movieReview/src/component/Login.css
@@ -21,6 +21,16 @@
     background-color: #f4f4f4;
   }
   
+
+ .icon{
+    position:fixed;
+    padding: 10px;
+    min-width: 40px;
+    margin-top: -3.5%;
+  }
+
+  
+  
   
   .login-box {
     display: flex;
@@ -40,7 +50,7 @@
     background-repeat: no-repeat;
     animation-name: imgslide;
     animation-duration: 10s;
-    animation-iteration-count: 10;
+    animation-iteration-count: infinite;
 
   }
   
@@ -70,6 +80,7 @@
   
   .content {
     margin-bottom: 15px;
+    
   }
   
   .content label {
@@ -83,6 +94,13 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+
+  }
+
+  .content .icon-input{
+    width: 100%;
+            padding: 10px;
+            text-align: right;
   }
   
   .userAuth {
